refactor(): Add get odrl contract route and controller, update swagger.
